# cmake-template

./: CMakeLists.txt  README.md  init_project.sh
app/: CMakeLists.txt  examplecpp.cc  examplepy.cc  main.cc
cmake/: example-config.cmake.in  example-setup.cmake
src/: CMakeLists.txt  Settings.cc  Settings.hh  config.hh.in  example.hh  projectConfig.cmake.in
src/example/: CMakeLists.txt  example.hh
src/example/util/: CMakeLists.txt  cli.cc  cli.hh  except.hh  log.hh
src/python/: CMakeLists.txt  _example.cc
src/python/example/: __init__.py  cli.py  core.py
src/util/: CMakeLists.txt  log.cc  log.hh
test/: CMakeLists.txt
